// Vitest Snapshot v1

exports[`mixed > tests/fixtures/mixed/basic.vue 1`] = `
"var basic = \`<script lang=\\"ts\\">
const name = 'Foo'
import { defineComponent as DO_defineComponent } from 'vue';
export default /*#__PURE__*/ DO_defineComponent({
  name,
});
</script>
<script setup lang=\\"ts\\">
import { emitHelper as __emitHelper } from 'unplugin-vue-macros/helper';


const {modelValue,  title } = defineProps<{modelValue: string

  title: string
}>()
const emit = defineEmits<{(evt: 'update:modelValue', value: string): void

  (evt: 'change'): void
}>()


const handleClick = () => {
  emit('change')
  __emitHelper(emit, 'update:modelValue', 'hello, ' + title)
}
</script>
\`;

export { basic as default };
"
`;

exports[`mixed > tests/fixtures/mixed/hoist-static.vue 1`] = `
"var hoistStatic = \`<script>
const name = 'App'
const propName = 'title'
import { defineComponent as DO_defineComponent } from 'vue';
export default /*#__PURE__*/ DO_defineComponent({
  name,
});
</script>
<script setup>




defineProps([propName])
</script>
\`;

export { hoistStatic as default };
"
`;

exports[`mixed > tests/fixtures/mixed/vue2-model.vue 1`] = `
"var vue2Model = \`<script lang=\\"ts\\">
import { defineComponent as DO_defineComponent } from 'vue';
export default /*#__PURE__*/ DO_defineComponent({
  name: 'Foo',
  model: {
    prop: 'value',
    event: 'changeInput'
  },
});
</script>
<script setup lang=\\"ts\\">
import { emitHelper as __emitHelper } from 'unplugin-vue-macros/helper';

const {modelValue, value,  title } = defineProps<{modelValue: string
value: string

  title: string
}>()
const emit = defineEmits<{(evt: 'update:modelValue', value: string): void
(evt: 'changeInput', value: string): void

  (evt: 'change'): void
}>()


const handleClick = () => {
  emit('change')
  __emitHelper(emit, 'update:modelValue', 'hello, ' + title)
  __emitHelper(emit, 'changeInput', 'Word,' + title)
}
</script>
\`;

export { vue2Model as default };
"
`;
